@@ -1,0 +1,7 @@
+SUBDIRS = \
+	IceCore
+
+#	Dummy
+#	EDS
+#	Rtm
+#	Sqlite
